@@ -425,3 +425,8 @@
 2011-12-20 Carsten Haitzler (The Rasterman)
 
         * Fix probable leak for g_static_mutex's on some architectures
+
+2011-12-20 Jihoon Kim
+
+	* Add XIM attribute support to Ecore_IMF
+
